# AttentionX

./: .env copy  README.md  Readme.md  dockerfile  document_processor.py  pyproject.toml
.github/workflows/: python-package-conda.yml
app/: app.py  azure_utils.py  modal_app.py  requirements.txt  requirements_diff.txt
data/: patient1.txt  patient2.txt  patient3.txt
metadata/virus/: articles_data.json  articles_data_bacteria.json
notebooks/: RAFT_Dataset_Creation.ipynb  Reflection_Agents.ipynb  TRAIN_RAFT.ipynb  Unsloth_QWEN3_TRAIN.ipynb
scripts/: generate_metadata.py
src/: agent_state.py  agent_workflow.py  prompts.py  qdrant_collections.py  qdrant_retrievers.py  reranker_cohore.py  settings.py  tools.py  utils.py
