[tool.poetry]
name = "attentionx"
version = "0.1.0"
description = "Multi-Agent system for microbe species"
authors = ["Doğan <dogankeskin33@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
